Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
 
 <p>Functional Programming is when functions, not objects or procedures, are used as the fundamental building blocks of a program. Functions in this sense, not to be confused with C language functions which are just procedures, are analogous to mathematical equations: they declare a relationship between two or more entities.
 Functional Programming, however, is not about mathematics but about abstraction and reducing complexity: as such, it provides a powerful paradigm in which to tackle complex, real-world programming tasks.</p>
+
+<p>Functional Programming Languages, which support this style of programming, provide at least some of the following features:</p>
+
+<ul>
+<li>FirstClass functions</li>
+<li>HigherOrderFunctions</li>
+<li>LexicalClosures</li>
+<li>PatternMatching</li>
+<li>SingleAssignment</li>
+<li>LazyEvaluation</li>
+<li>GarbageCollection</li>
+<li>TypeInference</li>
+<li>TailCallOptimization</li>
+<li>ListComprehensions</li>
+<li>Monadic effects [OnMonads]</li>
+</ul>
+
+<p>These features enable or support the following aims:</p>
+
+<ul>
+<li>shorter programs (lower lines-to-effect ratio)</li>
+<li>program correctness</li>
+<li>expressive programs</li>
+</ul>
       </section>
     </div>
 
