--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Functional Programming, however, is not about mathematics but about abstraction 
 </ul>
 
 <h3>
-<a id="what-are-firstclass-functions" class="anchor" href="#what-are-firstclass-functions" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are FirstClass functions?</h3>
+<a id="firstclass-functions" class="anchor" href="#firstclass-functions" aria-hidden="true"><span class="octicon octicon-link"></span></a>FirstClass functions?</h3>
 
 <p>FirstClass functions means that they are treated like any other values and can be passed as arguments to other functions or be returned as a result of a function. Being first-class also means that it is possible to define and manipulate functions from within other functions. Special attention needs to be given to functions that reference local variables from their scope. If such a function escapes their block after being returned from it, the local variables must be retained in memory, as they might be needed later when the function is called. Often it is difficult to determine statically when those resources can be released, so it is necessary to use automatic memory management.</p>
 
@@ -79,9 +79,9 @@ We can generalize this function to subtract any given number:</p>
 The function given to map then becomes a closure because \x -&gt; x - y references a local variable y from outside its body.
 Higher-order functions are very useful for refactoring code and reduce the amount of repetition. For example, typically most for loops can be expressed using maps or folds. Custom iteration schemes, such as parallel loops, can be easily expressed using HOFs.</p>
 
-<p>Higher-order functions are often used to implement domain-specific languages embedded in Haskell as combinator libraries.</p>
+<p>Higher-order functions are often used to implement domain-specific languages.</p>
 
-<p>Higher-order functions can be usually simulated in object-oriented languages by functions that take function-objects, also called functors (note that functor in Haskell is an entirely different concept). Variables from the scope of the call can be bound inside the function-object which acts as if it were a closure. This way of simulating HOFs is, however, very verbose and requires declaring a new class each time we want to use a HOF.</p>
+<p>Higher-order functions can be usually simulated in object-oriented languages by functions that take function-objects, also called functors. Variables from the scope of the call can be bound inside the function-object which acts as if it were a closure. This way of simulating HOFs is, however, very verbose and requires declaring a new class each time we want to use a HOF.</p>
       </section>
     </div>
 
