--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Functional Programming : Functional Programming">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <title>Functional Programming</title>
+  <meta name="description" content="Functional Programming">
 
-    <title>Functional Programming</title>
-  </head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <body>
+</head>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/arpitaggarwal/Functional-Programming">View on GitHub</a>
+<body>
 
-          <h1 id="project_title">Functional Programming</h1>
-          <h2 id="project_tagline">Functional Programming</h2>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h2>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Functional Programming</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Functional Programming</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/arpitaggarwal/Functional-Programming/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/arpitaggarwal/Functional-Programming/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/arpitaggarwal/Functional-Programming" class="code">View Functional Programming on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h2>
 <a id="what-is-functional-programming" class="anchor" href="#what-is-functional-programming" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Functional Programming?</h2>
 
 <p>Functional Programming is when functions, not objects or procedures, are used as the fundamental building blocks of a program. Functions in this sense, not to be confused with C language functions which are just procedures, are analogous to mathematical equations: they declare a relationship between two or more entities.
@@ -99,18 +109,26 @@ Higher-order functions are very useful for refactoring code and reduce the amoun
 <span class="pl-st">function</span> <span class="pl-en">myFunction</span>(){
     <span class="pl-s3">document</span>.<span class="pl-s3">getElementById</span>(<span class="pl-s1"><span class="pl-pds">"</span>demo<span class="pl-pds">"</span></span>).innerHTML <span class="pl-k">=</span> <span class="pl-s3">add</span>();
 }</pre></div>
-      </section>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/arpitaggarwal" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5689961?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/arpitaggarwal">arpitaggarwal</a> maintains <a href="https://github.com/arpitaggarwal/Functional-Programming">Functional Programming</a></p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Functional Programming maintained by <a href="https://github.com/arpitaggarwal">arpitaggarwal</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
 
-    
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/arpitaggarwal/Functional-Programming/tarball/master" class="tar">tar</a><a href="https://github.com/arpitaggarwal/Functional-Programming/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 
-  </body>
+  
+</body>
 </html>
